<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="select_folder_path">Select Folder Path</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="play">Play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="resume">resume</string>
    <string name="not_playing">Not Playing</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next_song">Next Song</string>
    <string name="demo_music_name">Demo Music Name</string>
    <string name="back">Back</string>
    <string name="demo_artist_name">Demo Artist Name</string>
    <string name="demo_album_name">Demo Album Name</string>
    <string name="demo_duration">Demo Duration</string>
</resources>